# THKame

./: .formatGen  .gitignore  CMakeLists.txt  README.md  THKamechinjiru.cpp  thk.cpp  thk.hpp  update.py
bbfield/: bbfield.cpp  bbfield.hpp
client/: gl.cpp  gl.hpp  thkame.cpp  thkame.hpp
core/: config.hpp  gl.cpp  gl.hpp  thkame.cpp  thkame.hpp
gl/: quad_fragment_shader.glsl  quad_vertex_shader.glsl
glsl/: simple_fragment_shader.glsl  simple_vertex_shader.glsl
resources/: danmaku.xml
server/: thkameserver.cpp  thkameserver.hpp
src/: main.cpp
src/client/: Client.cpp  Client.hpp  Menu.cpp  Menu.hpp  MenuCharacter.cpp  MenuCharacter.hpp  MenuMain.cpp  MenuMain.hpp  ResourceManager.cpp  ResourceManager.hpp  Resources.cpp  Resources.hpp  THKame.cpp  THKame.hpp  THKameClient.cpp  THKameClient.hpp  client.hpp  text.hpp  thkameclient.cpp  thkameclient.hpp
src/client/render/: Render.hpp  RenderBullet.cpp  RenderBullet.hpp
src/core/: Danmaku.cpp  Danmaku.hpp  Resources.cpp  Resources.hpp  Scene.cpp  Scene.hpp  Server.cpp  Server.hpp  ServerSetup.hpp  THKLog.cpp  THKLog.hpp  THKame.cpp  THKame.hpp  init.cpp  init.hpp  text.hpp  thkame.cpp  thkame.hpp  thklog.cpp  thklog.hpp
src/entities/: Bullet.hpp  Entity.hpp  Player.cpp  Player.hpp
src/math/: Transform.hpp  numbers.hpp
src/world/: Generator.cpp  Generator.hpp  World.cpp  World.hpp  entities.hpp  worlddefs.hpp
textures/: liberationmono.tga
